JRADEV-16429: typo in key

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -104,4 +104,4 @@ cpji.destination.issue.fields=Target Issue fields
 cpji.no.missing.required.fields=There are no missing required fields for the target issue.
 
 cpji.recently.used=Recently Used
-cpji.continue.typeing.to.see.more=More options available. Continue typing to refine further.
+cpji.continue.typing.to.see.more=More options available. Continue typing to refine further.
