JRADEV-17778: re-designed not copied attachments info

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -69,8 +69,8 @@ cpji.remote.user=Remote user
 cpji.copy.attachments=Copy Attachments
 cpji.attachments.are.disabled=Target JIRA has attachments disabled
 cpji.attachment.is.too.big=Attachment exceeds its maximum permitted size
-cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the target JIRA ({0}) and cannot be copied.
-cpji.some.attachments.are.too.big={0} of attachments exceed maximum attachment size in the target JIRA ({1}) and cannot be copied. Other attachments will be copied
+cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the target project ({0}) and cannot be copied.
+cpji.some.attachments.are.too.big=<span class="aui-lozenge aui-lozenge-subtle">{0} attachment(s)</span> exceed maximum attachment size in the target project ({1}) and cannot be copied. Other attachments will be copied
 cpji.attachments.which.wont.be.copied=Attachments, which will not be copied:
 cpji.attachment.file.not.found=File for attachment ''{0}'' is missing and was not copied.
 cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the target project
