--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -72,6 +72,7 @@ cpji.attachment.is.too.big=Attachment exceeds its maximum permitted size
 cpji.all.attachments.are.too.big=All attachments exceed maximum attachment size in the target project ({0}) and cannot be copied.
 cpji.some.attachments.count={0} attachments
 cpji.some.attachments.are.too.big=<span class="aui-lozenge aui-lozenge-subtle">{0}</span> exceed maximum attachment size in the target project ({1}) and cannot be copied. Other attachments will be copied
+cpji.one.attachment.is.too.big=<span class="aui-lozenge aui-lozenge-subtle">{0}</span> exceeds maximum attachment size in the target project ({1}) and cannot be copied. Other attachments will be copied
 cpji.attachments.which.wont.be.copied=Attachments, which will not be copied:
 cpji.attachment.file.not.found=File for attachment ''{0}'' is missing and was not copied.
 cpji.not.permitted.to.create.attachments=You don''t have the create attachments permission in the target project
