--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,7 @@
             </dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
-				<artifactId>mockito-all</artifactId>
+				<artifactId>mockito-core</artifactId>
 				<version>1.9.0</version>
 				<scope>test</scope>
 			</dependency>
