--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -142,7 +142,7 @@
                             <version>${jira.version}</version>
                             <httpPort>2990</httpPort>
                             <jvmDebugPort>5002</jvmDebugPort>
-                            <dataPath>${project.basedir}/src/test/amps/jira1-generated-test-resources.zip</dataPath>
+                            <dataPath>${project.build.directory}/src/test/amps/jira1-generated-test-resources.zip</dataPath>
 							<jvmArgs>-Xmx768m -XX:MaxPermSize=300m -Dplugin.webresource.batching.off=false</jvmArgs>
 							<pluginArtifacts>
 								<pluginArtifact>
@@ -204,5 +204,48 @@
             </plugin>
         </plugins>
     </build>
+	<profiles>
+		<profile>
+			<id>deployPassedArtifact</id>
+			<!-- WARNING - lifecycle hacking in progress -->
+			<build>
+				<defaultGoal>initialize</defaultGoal>
+				<plugins>
+					<plugin>
+						<artifactId>maven-deploy-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>initialize</phase>
+								<goals>
+									<goal>deploy</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>build-helper-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-artifact</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>attach-artifact</goal>
+								</goals>
+							   <configuration>
+								   <artifacts>
+									   <artifact>
+										   <file>${project.basedir}/passedArtifacts/${build.finalName}.jar</file>
+										   <type>jar</type>
+									   </artifact>
+								   </artifacts>
+							   </configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
