JRADEV-21621: fixed unit test not compiling on 5.2

--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -142,7 +142,7 @@
                             <version>${jira.version}</version>
                             <httpPort>2990</httpPort>
                             <jvmDebugPort>5002</jvmDebugPort>
-                            <dataPath>${project.build.directory}/src/test/amps/jira1-generated-test-resources.zip</dataPath>
+                            <dataPath>${project.basedir}/src/test/amps/jira1-generated-test-resources.zip</dataPath>
 							<jvmArgs>-Xmx768m -XX:MaxPermSize=300m -Dplugin.webresource.batching.off=false</jvmArgs>
 							<pluginArtifacts>
 								<pluginArtifact>
