--- a/pom.xml
+++ b/pom.xml
@@ -223,7 +223,7 @@
 			<dependency>
 				<groupId>com.atlassian.fugue</groupId>
 				<artifactId>fugue</artifactId>
-				<version>1.1-pniewiadomski-1</version>
+				<version>1.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.findbugs</groupId>
