NONE: fixed dependencies clash

--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -123,6 +123,10 @@
             <groupId>com.atlassian.usercompatibility</groupId>
             <artifactId>usercompatibility-jira</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
 	</dependencies>
 
     <build>
