NONE: fixed dependencies clash(also for JIRA 5.x)

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,10 @@
 						<groupId>com.sun.jersey</groupId>
 						<artifactId>jersey-core</artifactId>
 					</exclusion>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-simple</artifactId>
+                    </exclusion>
 				</exclusions>
 			</dependency>
 			<dependency>
