--- a/pom.xml
+++ b/pom.xml
@@ -370,6 +370,7 @@
 		<amps.version>5.0.4</amps.version>
 		<atlassian.selenium.version>2.1-m18</atlassian.selenium.version>
 		<jersey.version>1.8-atlassian-6</jersey.version>
+		<failOnMilestoneOrReleaseCandidateDeps>false</failOnMilestoneOrReleaseCandidateDeps>
     </properties>
 
 	<profiles>
