--- a/pom.xml
+++ b/pom.xml
@@ -322,8 +322,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5</version>
 				<configuration>
-					<source>${jdkLevel}</source>
-					<target>${jdkLevel}</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
