--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>cpji-jira</artifactId>
         <groupId>com.atlassian.cpji</groupId>
-		<version>4.0.1</version>
+		<version>4.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>cpji-jira-plugin</artifactId>
