--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -12,12 +12,12 @@
     <packaging>atlassian-plugin</packaging>
 
     <dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cpji-jira-plugin</artifactId>
-			<version>${project.version}</version>
-            <scope>compile</scope>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>${project.groupId}</groupId>-->
+			<!--<artifactId>cpji-jira-plugin</artifactId>-->
+			<!--<version>${project.version}</version>-->
+            <!--<scope>compile</scope>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>com.atlassian.fugue</groupId>
 			<artifactId>fugue</artifactId>
@@ -64,6 +64,10 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-api</artifactId>
                 </exclusion>
+				<exclusion>
+					<groupId>com.google.collections</groupId>
+					<artifactId>google-collections</artifactId>
+				</exclusion>
             </exclusions>
 		</dependency>
         <dependency>
@@ -80,12 +84,6 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.1.2</version>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>1.2</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.atlassian.jira.tests</groupId>
