--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -19,10 +19,6 @@
             <scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.atlassian.fugue</groupId>
-			<artifactId>fugue</artifactId>
-		</dependency>
-        <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>atlassian-jira-pageobjects</artifactId>
 			<exclusions>
@@ -38,6 +34,10 @@
 					<groupId>junit</groupId>
 					<artifactId>junit</artifactId>
 				</exclusion>
+                <exclusion>
+                    <groupId>com.atlassian.annotations</groupId>
+                    <artifactId>atlassian-annotations</artifactId>
+                </exclusion>
 			</exclusions>
 			<scope>compile</scope>
         </dependency>
@@ -126,6 +126,12 @@
 		<dependency>
 			<groupId>com.atlassian.jira</groupId>
 			<artifactId>jira-rest-java-client</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun.jersey</groupId>
+					<artifactId>jersey-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
@@ -220,6 +226,7 @@
                             <instanceId>jira2</instanceId>
                             <version>${jira.version}</version>
                             <httpPort>2991</httpPort>
+                            <jvmDebugPort>5003</jvmDebugPort>
                             <dataPath>${project.basedir}/src/test/amps/jira2-generated-test-resources.zip</dataPath>
 							<jvmArgs>-Xmx768m -XX:MaxPermSize=300m -Datlassian.plugins.enable.wait=300</jvmArgs>
                             <pluginArtifacts>
