--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -19,80 +19,46 @@
             <scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>jsr311-api</artifactId>
+		</dependency>
+		<dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>atlassian-jira-pageobjects</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.hamcrest</groupId>
-					<artifactId>hamcrest-core</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.hamcrest</groupId>
-					<artifactId>hamcrest-library</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-				</exclusion>
-                <exclusion>
-                    <groupId>com.atlassian.annotations</groupId>
-                    <artifactId>atlassian-annotations</artifactId>
-                </exclusion>
-			</exclusions>
 			<scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-core</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 		<dependency>
 			<groupId>com.atlassian.selenium</groupId>
 			<artifactId>atlassian-pageobjects-api</artifactId>
 			<scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-				<exclusion>
-					<groupId>com.google.collections</groupId>
-					<artifactId>google-collections</artifactId>
-				</exclusion>
-            </exclusions>
 		</dependency>
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-webdriver-tests</artifactId>
 			<scope>compile</scope>
         </dependency>
-		<dependency>
-			<groupId>com.sun.jersey.contribs</groupId>
-			<artifactId>jersey-apache-client</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.sun.jersey.contribs</groupId>-->
+			<!--<artifactId>jersey-apache-client</artifactId>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.1.2</version>
+			<version>4.2.1-atlassian-2</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.atlassian.jira.tests</groupId>
 			<artifactId>jira-testkit-client</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>rhino</groupId>
-			<artifactId>js</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>rhino</groupId>-->
+			<!--<artifactId>js</artifactId>-->
+		<!--</dependency>-->
         <dependency>
             <groupId>com.atlassian.qunit</groupId>
             <artifactId>atlassian-qunit-plugin-util</artifactId>
@@ -103,36 +69,12 @@
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-tests</artifactId>
             <scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.mockito</groupId>
-					<artifactId>mockito-all</artifactId>
-				</exclusion>
-			</exclusions>
         </dependency>
-		<dependency>
-			<groupId>com.atlassian.jira.tests</groupId>
-			<artifactId>jira-func-test-basics</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.atlassian.jira.tests</groupId>-->
+			<!--<artifactId>jira-func-test-basics</artifactId>-->
+		<!--</dependency>-->
 		<!-- REST dependencies -->
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>jsr250-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.atlassian.jira</groupId>
-			<artifactId>jira-rest-java-client</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>com.sun.jersey</groupId>
-					<artifactId>jersey-core</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
@@ -142,24 +84,11 @@
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-view-issue-plugin</artifactId>
         </dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-		</dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.10</artifactId>
             <version>2.2.4</version>
             <scope>test</scope>
-        </dependency>
-		<dependency>
-			<groupId>com.atlassian.util.concurrent</groupId>
-			<artifactId>atlassian-util-concurrent</artifactId>
-			<scope>test</scope>
-		</dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
     <build>
