--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,7 @@
         <amps.version>6.0.1</amps.version>
         <atlassian.selenium.version>2.2.1-m02-jira-1</atlassian.selenium.version>
         <jersey.version>1.8-atlassian-16</jersey.version>
+        <failOnMilestoneOrReleaseCandidateDeps>false</failOnMilestoneOrReleaseCandidateDeps>
     </properties>
 
     <profiles>
